--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,27 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.fm.firebase.shoppinglistplusplus">
+    package="com.fm.firebase.shoppinglist">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name="com.fm.firebase.shoppinglistplusplus.ShoppingListApplication"
+        android:name="com.fm.firebase.shoppinglist.ShoppingListApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_shopping_list"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.fm.firebase.shoppinglistplusplus.ui.MainActivity"
+            android:name="com.fm.firebase.shoppinglist.ui.MainActivity"
             android:label="@string/app_name"
             android:windowSoftInputMode="adjustPan">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.fm.firebase.shoppinglistplusplus.ui.MainActivity" />
+                android:value="com.fm.firebase.shoppinglist.ui.MainActivity" />
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".ui.activeListDetails.ActiveListDetailsActivity"
+            android:label="@string/title_activity_list_details"
+            android:parentActivityName=".ui.MainActivity"
+            android:windowSoftInputMode="adjustPan">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ui.MainActivity" />
         </activity>
     </application>
 
